--- a/css/styles.css
+++ b/css/styles.css
@@ -169,7 +169,7 @@ img {
       rgba(46, 47, 66, 0.7),
       rgba(46, 47, 66, 0.7)
     ),
-    url(../images/hero-bg.jpg);
+    url(../images/office.jpg);
   background-repeat: no-repeat;
   background-position: center;
   block-size: cover;
