--- a/css/styles.css
+++ b/css/styles.css
@@ -665,7 +665,10 @@ img {
   cursor: pointer;
   border: none;
 }
-
+.footer-form-btn:hover,
+.footer-form-btn:focus {
+  background-color: #404bbf;
+}
 .footer-form-icon {
   width: 24px;
   height: 24px;
@@ -916,4 +919,7 @@ img {
   cursor: pointer;
   border: none;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.modal-send-btn:hover .modal-send-btn :focus {
+  background-color: #404bbf;
 }
