--- a/css/styles.css
+++ b/css/styles.css
@@ -667,7 +667,7 @@ img {
 }
 .footer-form-btn:hover,
 .footer-form-btn:focus {
-  background-color: #404bbf;
+  color: #404bbf;
 }
 .footer-form-icon {
   width: 24px;
